Wed Jan 10 14:37:34 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>

 * mge-xml: new experimental driver for MGE (Office Protection Systems
   and UPS Systems) Network Management Cards and Proxy.
   This driver use the same HID core as usbhid-ups and newmge-shut
   and its development is sponsored by MGE Office Protection Systems.
   The ezXML parser has been embedded in the source to allow the
   driver development (dual licensed under MIT + GPL).

Thu Jan 12 16:15:00 UTC 2007 / Kjell Claesson <kjell.claesson@epost.tidanet.se>

 - Changed <stdint.h> to "nut_stdint.h" in nut_usb.c. Pointed out by Arjen. 

Sat Jan 12 15:44:43 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/hidparser.c: The changes in r1210 broke the calculation of the size
   of reports, so this change is reverted.
 - drivers/libhid.c: Check if the HID Path ends in 0x00000000 and if so, assume
   this variable isn't used and don't update it when we receive an update over
   the interrupt pipeline. Optimized the order in which we determine if a
   variable needs updating so that the most restrictive tests are done first.

Thu Jan 11 16:57:50 UTC 2007 / Kjell Claesson <kjell.claesson@epost.tidanet.se>

 - Added possible fix for Powerware 3110 5115 and 9120 on usb to nut_usb.c
   Changed driver to version to 0.14.

Wed Jan 10 09:32:06 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>

 - packaging/debian/changelog: update the release version to 2.3.0-1

Tue Jan  8 01:53:09 UTC 2008 / Alexander I. Gordeev <lasaine@lvk.cs.msu.su>

 - Added info about all recently reported models, supported by
   megatec_usb driver.

Mon Jan  7 03:28:32 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - Patch from Jacob Schmier: drivers/oneac.[ch]: Updated for models ON700XAU,
   ON1000XAU, ON1500XAU.

Sat Jan  5 18:45:26 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/tripplite-hid.c: Don't apply battery voltage scaling if this
   isn't needed. Also, add some more variables and flags (so that we